# linkedin-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  agent_state.json  calendar_planner.py  get_linkedin_token.py  orchestrator.py  performance_check.py  pyproject.toml  requirements.txt
.github/workflows/: calendar_planner.yml  linkedin_agent.yml  performance_check.yml  watchdog.yml
app/: __init__.py  config.py  logging_config.py  models.py  orchestrator.py  reporting.py  strings.py
app/core/: __init__.py  http.py  lock.py  scheduler.py  state.py
app/pipelines/: __init__.py  base.py  carousel.py  poll.py  regular.py  story.py
app/services/: __init__.py  gemini_client.py  image_fetcher.py  pdf_generator.py  telegram_bot.py  topic_engine.py
app/services/content/: __init__.py  prompts.py  writer.py
app/services/linkedin/: __init__.py  client.py  publisher.py
config/: __init__.py  settings.py
entrypoints/: __init__.py  get_linkedin_token.py  performance_check.py  plan_calendar.py  run_agent.py
src/: __init__.py  approval_bot.py  content_writer.py  image_fetcher.py  linkedin_publisher.py  pdf_generator.py  topic_engine.py
tests/: conftest.py  test_approval.py  test_content_writer.py  test_publisher.py  test_scheduler.py  test_state.py  test_topic_engine.py
